docs/api/qiskit/0.39/qiskit.algorithms.EigensolverResult.md
---
title: EigensolverResult
description: API reference for qiskit.algorithms.EigensolverResult
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.EigensolverResult
---

# EigensolverResult

<span id="qiskit.algorithms.EigensolverResult" />

`EigensolverResult`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/algorithms/eigen_solvers/eigen_solver.py "view source code")

Bases: `qiskit.algorithms.algorithm_result.AlgorithmResult`

Pending deprecation: Eigensolver Result.

The EigensolverResult class has been superseded by the [`qiskit.algorithms.eigensolvers.EigensolverResult`](qiskit.algorithms.eigensolvers.EigensolverResult "qiskit.algorithms.eigensolvers.EigensolverResult") class. This class will be deprecated in a future release and subsequently removed after that.

## Methods

### combine

<span id="qiskit.algorithms.EigensolverResult.combine" />

`EigensolverResult.combine(result)`

Any property from the argument that exists in the receiver is updated. :type result: `AlgorithmResult` :param result: Argument result with properties to be set.

**Raises**

**TypeError** – Argument is None

**Return type**

`None`

## Attributes

<span id="qiskit.algorithms.EigensolverResult.aux_operator_eigenvalues" />

### aux\_operator\_eigenvalues

Return aux operator expectation values.

These values are in fact tuples formatted as (mean, standard deviation).

**Return type**

`Optional`\[`List`\[`Union`\[`List`\[`Optional`\[`Tuple`\[`complex`, `complex`]]], `Dict`\[`str`, `Tuple`\[`complex`, `complex`]]]]]

<span id="qiskit.algorithms.EigensolverResult.eigenstates" />

### eigenstates

return eigen states

**Return type**

`Optional`\[`ndarray`]

<span id="qiskit.algorithms.EigensolverResult.eigenvalues" />

### eigenvalues

returns eigen values

**Return type**

`Optional`\[`ndarray`]

